class Equipment:
    def __init__(self, name, weight):
        self.name = name
        self.weight = weight