class Exercise:
    def __init__(self, name, exercise_type, has_equipment=False):
        self.name = name
        self.hasEquipment = has_equipment
        self.exercise_type = exercise_type
