class Goal:
    def __init__(self, name, description, goal_date):
        self.name = name
        self.description = description
        self.goal_date = goal_date
