from Cardio import Cardio

class Jogging:
