class User:
    def __innit__(self, name, age, weight, height):
        self.name = name
        self.age = age
        self.weight = weight
        self.height = height