from BodyWeight import BodyWeight

class Yoga(BodyWeight):
    pass