@startuml FitnessUml
skinparam Style strictuml
class User {
    String name
    int age
    int weight
    int height
    Goal goal
    -addNewGoal()
    -modifyGoal()
    -setGoal()
    -setIntensity()
    +addTraining()
    +modifyTraining()
}

class Goal {
    String name
    String description
    date goalDate
}

class TrainingDataBase {
    dict trainings
    +chooseTraining()
    +removeTraining()
}

class ExerciseDataBase {
    dict exercises
    -addExercise()
    +chooseExercise()
    +removeExercise()
}

class Exercise {
    String name
    bool hasEquipment
    enum type
    +addEquipment()
    +removeEquipment()
}

class Equipment {
    String name
    int weight
    +modifyWeight()
}

abstract class Training {
    {abstract} addExercise()
    {abstract} removeExercise()
    {abstract} createExercise()
}

class BodyWeight {
    int reps
    int sets
    {abstract} addSets()
    {abstract} removeSets()
}

class Cardio {
    time time 
    float distance
    {abstract} addDistance()
    {abstract} addTime()

}

class WeightLifting {
    int reps
    int sets
    {abstract} addSets()
    {abstract} removeSets()
}

class Mixed {
    int reps
    int sets
    {abstract} addSets()
    {abstract} removeSets()
}

class Calisthenics {
    int reps
    int sets
}

class Yoga {
    time time
    +addTime()
}

class HIIT {
    time time
    int sets
}

class Jogging {
    time time
    float distance
}

class Machines {
    int reps
    int sets
}

class FreeWeight {
    int reps
    int sets
}

User o-- Goal
User *-- Training
Equipment -o Exercise
Exercise -* Training
TrainingDataBase --o Training
ExerciseDataBase --o Exercise
Training <|-- BodyWeight
Training <|-- Cardio
Training <|-- WeightLifting
Training <|-- Mixed

BodyWeight <|-- Calisthenics
BodyWeight <|-- Yoga
Cardio <|-- HIIT
Cardio <|-- Jogging
WeightLifting <|-- FreeWeight
WeightLifting <|-- Machines

@enduml